superb_ock/static/superb_ock/css/styles.css
.carousel-item,
.player-card {
    text-align: center;
    padding: 20px;
    border: 1px solid #ddd;
    margin-bottom: 10px;
    border-radius: 5px;
    background-color: var(--bs-body-bg);
}
.carousel-item {
    background-color: var(--bs-tertiary-color);
    /* background-color: green; */
}

.score-entry {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin-top: 5px;
}

.score-input {
    width: 60px;
    text-align: center;
    font-size: 1.2rem;
    font-weight: bold;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

